se modificaron las imagenes de los trabajadores y algunos mas

--- a/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
@@ -95,7 +95,7 @@
         </div>
     </section>
 
-    <!-- Timeline -->
+<!--     Timeline 
     <section class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-5">Nuestra Trayectoria</h2>
@@ -118,7 +118,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Team Section -->
     <section class="py-5">
@@ -127,37 +127,37 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card text-center">
-                        <img src="/api/placeholder/300/300" class="card-img-top" alt="CEO">
+                        <img src="../img/miapa.jpeg" class="card-img-top" alt="CEO">
                         <div class="card-body">
                             <h5 class="card-title">Amós Olguin H.</h5>
-                            <p class="card-text">CEO</p>
+                            <p class="card-text">Jefe</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card text-center">
-                        <img src="/api/placeholder/300/300" class="card-img-top" alt="CTO">
+                        <img src="../img/miama.jpeg" class="card-img-top" alt="CTO">
                         <div class="card-body">
                             <h5 class="card-title">Rosalba Quiroz P.</h5>
-                            <p class="card-text">CTO</p>
+                            <p class="card-text">Jefa</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card text-center">
-                        <img src="/api/placeholder/300/300" class="card-img-top" alt="COO">
+                        <img src="../img/yomerenges.jpeg" class="card-img-top" alt="COO">
                         <div class="card-body">
                             <h5 class="card-title">Amós Olguin Q.</h5>
-                            <p class="card-text">COO</p>
+                            <p class="card-text">Chalán de los jefes</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card text-center">
-                        <img src="/api/placeholder/300/300" class="card-img-top" alt="CFO">
+                        <img src="../img/mihermana.jpeg" class="card-img-top" alt="CFO">
                         <div class="card-body">
                             <h5 class="card-title">Adanahe Olguin Q.</h5>
-                            <p class="card-text">CFO</p>
+                            <p class="card-text">Chalán del chalán de los jefes</p>
                         </div>
                     </div>
                 </div>
