Eliminar producto y precio jalando

--- a/MoxxDesignsWebApp/src/main/webapp/pages/carrito.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/carrito.html
@@ -78,7 +78,7 @@
                             <strong>Total</strong>
                             <strong id="total">$0.00</strong>
                         </div>
-                        <button class="btn btn-checkout" onclick="checkout()">Proceder al pago</button>
+                        <button class="btn btn-checkout" onclick="hacerPedido()">Proceder al pago</button>
                     </div>
                 </div>
             </div>
