Ver Pedidos Completado

--- a/MoxxDesignsWebApp/src/main/webapp/pages/index.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/index.html
@@ -39,6 +39,9 @@
                         <a class="nav-link" href="contactanos.html">Contáctanos</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="ver-pedidos.html">Ver Pedidos</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="carrito.html">🛒 Carrito</a>
                     </li>
                     <li class="nav-item">
