--- a/MoxxDesignsWebApp/src/main/webapp/pages/proyectos.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/proyectos.html
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link active" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="proyectos.html">Proyectos</a>
+                        <a class="nav-link" href="proyectos.html">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cotizacion.html">Cotización</a>
@@ -42,12 +42,14 @@
                         <a class="nav-link" href="contactanos.html">Contáctanos</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="ver-pedidos.html">Ver Pedidos</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="carrito.html">🛒 Carrito</a>
                     </li>
-                </ul>
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Iniciar Sesión</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Iniciar Sesión</a>
+                    </li>
             </div>
         </div>
     </nav>
