--- a/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link active" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="proyectos.html">Proyectos</a>
@@ -36,10 +36,13 @@
                         <a class="nav-link" href="cotizacion.html">Cotización</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="sobre-nosotros.html">Sobre Nosotros</a>
+                        <a class="nav-link" href="sobre-nosotros.html">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactanos.html">Contáctanos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ver-pedidos.html">Ver Pedidos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="carrito.html">🛒 Carrito</a>
