--- a/MoxxDesignsWebApp/src/main/webapp/pages/carrito.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/carrito.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link active" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="proyectos.html">Proyectos</a>
@@ -42,7 +42,13 @@
                         <a class="nav-link" href="contactanos.html">Contáctanos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="carrito.html">🛒 Carrito</a>
+                        <a class="nav-link" href="ver-pedidos.html">Ver Pedidos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="carrito.html">🛒 Carrito</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Iniciar Sesión</a>
                     </li>
                 </ul>
             </div>
@@ -78,7 +84,7 @@
                             <strong>Total</strong>
                             <strong id="total">$0.00</strong>
                         </div>
-                        <button class="btn btn-checkout" onclick="hacerPedido()">Proceder al pago</button>
+                        <button class="btn btn-checkout" onclick="hacerPedido()">Hacer Pedido</button>
                     </div>
                 </div>
             </div>
