--- a/MoxxDesignsWebApp/src/main/webapp/pages/ver-pedidos.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/ver-pedidos.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cotización - Empresa XYZ</title>
+    <title>Ver Pedidos - MoxxDesigns</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="../styles/footer.css" rel="stylesheet">
-    <link href="../styles/cotizacion.css" rel="stylesheet">
+    <link href="../styles/index.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../img/LOGOMD.png">
+    <style>
+        .pedidos-section {
+            background-color: var(--white);
+            padding: 4rem 0;
+            min-height: 70vh;
+        }
+        .table-pedidos {
+            background-color: var(--white);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        .table-pedidos thead {
+            background-color: var(--primary-blue);
+            color: var(--white);
+        }
+    </style>
 </head>
-
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
@@ -20,14 +33,13 @@
             <div style="display: flex;" class="site-branding">
                 <img src="../img/LOGOMD.png" width="300" style="margin-right: 5px;"><a href="#"></a>
             </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Inicio</a>
+                        <a class="nav-link" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="proyectos.html">Proyectos</a>
@@ -47,39 +59,31 @@
                     <li class="nav-item">
                         <a class="nav-link" href="carrito.html">🛒 Carrito</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Iniciar Sesión</a>
-                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Header -->
-    <header class="quote-header">
+    <!-- Pedidos Section -->
+    <section class="pedidos-section" style="margin-top: 76px;">
         <div class="container">
-            <h1 class="display-4">Cotización de Servicios</h1>
-            <p class="lead">Explora nuestra gama de servicios y productos disponibles.</p>
-        </div>
-    </header>
-
-    <!-- Products Section -->
-    <section class="products-section">
-        <div class="container">
-            <!-- Filter Section -->
-            <div class="filter-section text-center">
-                <button class="category-btn active" data-category="all">Todos</button>
-            </div>
-
-            <!-- Products Grid -->
-            <div class="row g-4" id="products-container">
-                <!-- Products from DB -->
+            <h2 class="text-center mb-4" style="color: var(--dark-blue);">Mis Pedidos</h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover table-pedidos">
+                    <thead>
+                        <tr>
+                            <th>Fecha y Hora</th>
+                            <th>Cantidad</th>
+                            <th>Precio Total</th>
+                        </tr>
+                    </thead>
+                    <tbody id="pedidosTableBody">
+                        <!-- Contenido de pedidos se agregará dinámicamente con JavaScript -->
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
-
-    <!-- Cart Notification -->
-    <div id="cart-notification"></div>
 
     <!-- Footer Section -->
     <footer class="footer mt-5">
@@ -122,10 +126,9 @@
         </div>
     </footer>
 
-    <script src="../js/cotizacionController.js"></script>
     <script src="../js/navbarController.js"></script>
+    <script src="../js/verPedidosController.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
