--- a/MoxxDesignsWebApp/src/main/webapp/pages/logout-necesario.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/logout-necesario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cerrar Sesión Requerido - Empresa XYZ</title>
+    <title>Cerrar Sesión Requerido</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link href="../styles/logout-necesario.css" rel="stylesheet">
